# news

./: .env.example  pyproject.toml
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/comments/: admin.py  models.py  serializers.py  urls.py  views.py
apps/comments/migrations/: 0001_initial.py
apps/main/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/main/migrations/: 0001_initial.py
apps/payment/: models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/payment/migrations/: 0001_initial.py
apps/subscribe/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/subscribe/management/commands/: create_subscription_product.py  fix_stripe_integration.py
apps/subscribe/migrations/: 0001_initial.py
backend/: settings.py  urls.py
